# gtkcaffecv

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: README.TXT
glade/: gtkwin.glade
src/: main.cc  mcvwin.cc  mcvwin.h
src/mcvcaffe/: mcvcaffe.cc  mcvcaffe.h
src/mcvwidget/: mcvdraw.cc  mcvdraw.h
